src/App.module.scss
@import "./sass/app.scss";

body {
  background-color: $background;
}

.app {
  display: grid;
  grid-template-rows: 64px auto;
  grid-template-areas:
    "."
    "feed";

  @media (min-width: 900px) {
    grid-template-columns: 2fr 1fr;
    grid-template-areas:
      ". ."
      "feed contacts";
  }

  @media (min-width: 1100px) {
    grid-template-columns: 1fr 2fr 1fr;
    grid-template-areas:
      ". . . "
      "more feed contacts";
  }

  @media (min-width: 1920px) {
    grid-template-columns: 1fr 744px 1fr;
    margin: 0 auto;
  }
}

.feed {
  grid-area: feed;
  @media (min-width: 900px) {
    margin: 0 auto;
    padding: 0 32px;
  }
}

.contacts {
  grid-area: contacts;
  display: none;
  margin-top: 20px;
  width: 100%;
  @media (min-width: 900px) {
    display: block;
    position: fixed;
    width: 33%;
    top: 64px;
    right: 0px;
    z-index: 1;
  }

  @media (min-width: 1100px) {
    width: 25%;
  }

  @media (min-width: 1920px) {
    width: 360px;
    right: calc(50vw - 744px);
  }
}

.more {
  grid-area: more;
  display:none;
  @media (min-width: 1100px) {
    display: block;
    position: fixed;
    width: 25%;
    top: 64px;
    left: 0px;
    z-index: 1;
    height: calc(100vh - 64px);
    overflow-y:scroll;
    overflow-x:hidden;
  }
  
  @media (min-width: 1920px) {
    width: 360px;
    left: calc(50vw - 744px);
  }
}

